--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
       <div class="copyright-wrap d-md-flex py-4">
         <div class="mr-md-auto text-center text-md-left">
           <div class="copyright">
-            Copyright &copy; 2020.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
+            Copyright &copy; 2020.Company name All rights reserved.
           </div>
           <div class="credits"></div>
         </div>
