--- a/index.html
+++ b/index.html
@@ -145,9 +145,7 @@
       <div class="copyright-wrap d-md-flex py-4">
         <div class="mr-md-auto text-center text-md-left">
           <div class="copyright">
-            Copyright &copy; 2021 BLEURT All rights reserved.<br />
-            云分小分旗下网站<br />
-            YFXF.COM
+            Copyright &copy; 2021 BLEURT All rights reserved.
           </div>
           <div class="credits"></div>
         </div>
