--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Our Address</h3>
-              <p>Beijing, China</p>
+              <p>ZhengZhou, China</p>
             </div>
           </div>
 
