--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BLEURT</title>
+  <title>10995</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -145,7 +145,7 @@
       <div class="copyright-wrap d-md-flex py-4">
         <div class="mr-md-auto text-center text-md-left">
           <div class="copyright">
-            Copyright &copy; 2023 BLEURT All rights reserved.
+            Copyright &copy; 2023 10995 All rights reserved.
           </div>
           <div class="credits"></div>
         </div>
