--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div class="row justify-content-center">
         <div class="col-xl-9 d-flex align-items-center">
-          <h1 class="logo mr-auto"><a href="index.html">BLEURT</a></h1>
+          <h1 class="logo mr-auto"><a href="index.html">10995</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -60,7 +60,7 @@
     <div class="container-fluid" data-aos="fade-up">
       <div class="row justify-content-center">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>BLEURT</h1>
+          <h1>10995</h1>
           <h2>a Transfer Learning-Based Metric for Natural Language Generation</h2>
           <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div>
         </div>
