--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
       <div class="row justify-content-center">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>10995</h1>
-          <h2>a Transfer Learning-Based Metric for Natural Language Generation</h2>
-          <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div>
+          <h2>产品改变世界</h2>
+          <div><a href="#about" class="btn-get-started scrollto">开始改变</a></div>
+          
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
           <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
