--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="mr-md-auto text-center text-md-left">
           <div class="copyright">
             Copyright &copy; 2023 10995 All rights reserved.
-            豫ICP备2021022563号-1 < /br>
+            <div class="text-muted">豫ICP备2021022563号-1</div>
           </div>
           <div class="credits"></div>
         </div>
