--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="mr-md-auto text-center text-md-left">
           <div class="copyright">
             Copyright &copy; 2023 10995 All rights reserved.
-            <div class="text-muted">豫ICP备2021022563号-1</div>
+            <div class="text-muted"><a href="https://beian.miit.gov.cn/" >豫ICP备2021022563号-1</a></div>
           </div>
           <div class="credits"></div>
         </div>
